feat: 26.1 Migration - Stage C#3 (Not compiling) - Rendering rewrite