@@ -83,6 +83,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs '-Dnet.bytebuddy.experimental=true'
 }
 
 license {
